--- a/service-worker-lab/app/index.html
+++ b/service-worker-lab/app/index.html
@@ -47,8 +47,8 @@ limitations under the License.
           return;
         }
         navigator.serviceWorker.register('service-worker.js')
-        .then(function() {
-          console.log('Registered');
+        .then(function(registration) {
+          console.log('Registered at scope:', registration.scope);
         })
         .catch(function(error) {
           console.log('Registration failed:', error);
