--- a/lighthouse-lab/app/index.html
+++ b/lighthouse-lab/app/index.html
@@ -89,7 +89,21 @@ limitations under the License.
 
   </footer>
 
-  <!-- TODO 5.1: Add and register a service worker  -->
+  <script>
+    (function() {
+      if (!('serviceWorker' in navigator)) {
+        console.log('Service worker not supported');
+        return;
+      }
+      navigator.serviceWorker.register('service-worker.js')
+      .then(function(registration) {
+        console.log('SW successfully registered');
+      })
+      .catch(function(error) {
+        console.log('registration failed', error);
+      });
+    })();
+  </script>
 
 </body>
 </html>
