--- a/responsive-design-lab/app/index.html
+++ b/responsive-design-lab/app/index.html
@@ -5,7 +5,7 @@
 
   <title>Responsive Design Lab</title>
 
-  <!-- TODO 6.1 - include custom Modernizr build -->
+  <script src="modernizr-custom.js"></script>
 
   <link rel="stylesheet" href="styles/main.css">
 </head>
