--- a/responsive-images-lab/app/index.html
+++ b/responsive-images-lab/app/index.html
@@ -37,10 +37,8 @@ limitations under the License.
 
     <p class="lead">I love cheese, especially manchego swiss. ☺ Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
 
-    <!-- TODO 5.2 - add the media query to the sizes attribute in the SFO image below -->
-
     <figure>
-        <img id="sfo" srcset="images/sfo-1600_large.jpg 1600w, images/sfo-1000_large.jpg 1000w, images/sfo-800_medium.jpg 800w, images/sfo-500_small.jpg 500w" src="images/sfo-500_small.jpg" sizes="50vw" alt="View from aircraft window near San Francisco airport">
+        <img id="sfo" srcset="images/sfo-1600_large.jpg 1600w, images/sfo-1000_large.jpg 1000w, images/sfo-800_medium.jpg 800w, images/sfo-500_small.jpg 500w" src="images/sfo-500_small.jpg" sizes="(max-width: 700px) 90vw, 50vw" alt="View from aircraft window near San Francisco airport">
       <figcaption>Near SFO</figcaption>
     </figure>
 
