--- a/google-analytics-lab/app/pages/other.html
+++ b/google-analytics-lab/app/pages/other.html
@@ -34,7 +34,16 @@ limitations under the License.
 
     <a href="../index.html">Back</a>
 
-    <!-- TODO 3: Add tracking snippet -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-106751192-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
   </body>
 
